packages/frontend/scss/dialogs/_group-styles.scss
@use '../mixins';

input.group-name-input {
  background-color: transparent;
  border: 0;
  border-bottom: solid;
  border-color: var(--loginInputFocusColor);
  color: var(--bp4MenuText);
  font-size: x-large;
  height: auto;
  margin-bottom: 0;
  margin-inline-start: 0;
  user-select: text;
  width: 100%;
  // A blinking cursor is enough in terms of visibility. Or is it??
  outline: none;
}

.group-separator {
  background-color: var(--bp4DialogBgSecondary);
  color: var(--bp4MenuText);
  padding: 10px 15px;

  &.no-margin {
    margin: 0px;
  }
}

.group-settings-container {
  align-items: center;
  display: flex;
  margin-bottom: 20px;

  .group-name-input-wrapper {
    margin-inline-start: 17px;

    p.input-error {
      color: var(--colorDanger);
      position: absolute;
    }
  }
}

.group-image-wrapper {
  position: relative;

  .group-image {
    @include mixins.button-reset;
  }

  .group-image-edit-button {
    @include mixins.button-reset;

    position: absolute;
    width: 28px;
    height: 28px;
    padding: 4px;
    left: -3px;
    top: 5px;
    background-color: var(--colorPrimary);
    border-radius: 50%;

    &:hover {
      cursor: pointer;
      opacity: 0.96;
    }

    div {
      height: 20px;
      width: 20px;
      @include mixins.color-svg('./images/icons/lead-pencil.svg', white);
    }
  }
}

.group-profile-subtitle {
  text-align: center;
  padding-top: 6px;
}

